<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label1"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="@string/bill_amount" />

    <TextView
        android:id="@+id/label2"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/percentTextView"
        android:layout_alignStart="@+id/label1"
        android:text="@string/percent" />

    <TextView
        android:id="@+id/label3"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/label1"
        android:layout_below="@+id/label2"
        android:text="@string/tipLabel" />

    <TextView
        android:id="@+id/label4"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/label1"
        android:layout_below="@+id/label3"
        android:text="@string/totalLabel" />

    <TextView
        android:id="@+id/label5"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/label1"
        android:layout_marginTop="209dp"
        android:text="@string/rounding" />

    <TextView
        android:id="@+id/label6"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/label1"
        android:layout_below="@+id/roundingRadioGroup"
        android:text="@string/split_bill" />

    <TextView
        android:id="@+id/perPersonLabel"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/label1"
        android:layout_marginBottom="60dp"
        android:text="@string/per_person" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tipTextView"
        android:layout_marginTop="85dp" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        style="@style/PaddedWidget"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label2"
        android:layout_alignEnd="@+id/billAmountEditText" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/perPersonTextView"
        style="@style/TextView"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/perPersonLabel"
        android:layout_toEndOf="@+id/percentTextView" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/label1"
        android:layout_marginEnd="31dp"
        android:ems="10"
        android:inputType="numberDecimal" />

    <RadioGroup
        android:id="@+id/roundingRadioGroup"
        style="@style/PaddedWidget"
        android:layout_width="wrap_content"
        android:layout_height="137dp"
        android:layout_alignTop="@+id/label5"
        android:layout_toEndOf="@+id/label1">

        <RadioButton
            android:id="@+id/roundNoneRadioButton"
            style="@style/TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/roundTipRadioButton"
            style="@style/TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip" />

        <RadioButton
            android:id="@+id/roundTotalRadioButton"
            style="@style/TextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total" />
    </RadioGroup>

    <Spinner
        android:id="@+id/splitSpinner"
        style="@style/PaddedWidget"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label6"
        android:layout_toEndOf="@+id/percentTextView" />

</RelativeLayout>